# llm-adversarial-game

./: .gitignore  README.md  evaluate.py  example.py  pyproject.toml  train.py
configs/: default.yaml
src/: __init__.py  config.py
src/core/: __init__.py  structures.py
src/data/: __init__.py  dataset.py
src/evaluation/: __init__.py  metrics.py
src/game/: __init__.py  adversary.py  defender.py  environment.py  rewards.py
src/reporting/: generate.py
src/training/: __init__.py  equilibrium.py  logger.py  self_play.py
